@@ -18,6 +18,9 @@ git-annex (4.20130502) UNRELEASED; urgency=low
   * SHA: Add a runtime sanity check that sha commands output something
     that appears to be a real sha.
   * configure: Better checking that sha commands output in the desired format.
+  * rsync special remotes: When sending from a crippled filesystem, use
+    the destination's default file permissions, as the local ones can
+    be arbitrarily broken. (Ie, ----rwxr-x for files on Android)
 
  -- Joey Hess <joeyh@debian.org>  Thu, 02 May 2013 20:39:19 -0400
 
